tests/outref/TC010.ref

-- TC010 : OCTO381 : Allow DATE and TIME types to be specified in the Octo DDL but treated as strings internally

-- Test that DATE and TIME types work (TIME specified without any precision)
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME);
SELECT date1 from DATETIME;
SELECT time1 from DATETIME;
SELECT id::DATE from DATETIME;
SELECT id::TIME from DATETIME;
SELECT date1::integer from DATETIME;
SELECT date1::numeric from DATETIME;
SELECT date1::varchar from DATETIME;
SELECT date1::text from DATETIME;
SELECT date1::date from DATETIME;
SELECT date1::time from DATETIME;

-- Test that TIME(precision) (TIME type specified with precision) also works
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(10));
SELECT time1 from DATETIME;
SELECT time1::integer from DATETIME;
SELECT time1::numeric from DATETIME;
SELECT time1::varchar from DATETIME;
SELECT time1::text from DATETIME;
SELECT time1::date from DATETIME;
SELECT time1::time from DATETIME;

-- Test that various precision values work with TIME
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(10));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(4));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(8));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(16));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(32));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(64));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(127));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(0));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1.5));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(15.8));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME('abcd'));
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(abcd));

2020-01-04
1998-11-13
2005-09-22
1975-05-31
14:01:10
14:12:59
13:23:09
15:15:22
1
2
3
4
1
2
3
4
2020
1998
2005
1975
2020
1998
2005
1975
2020-01-04
1998-11-13
2005-09-22
1975-05-31
2020-01-04
1998-11-13
2005-09-22
1975-05-31
2020-01-04
1998-11-13
2005-09-22
1975-05-31
2020-01-04
1998-11-13
2005-09-22
1975-05-31
14:01:10
14:12:59
13:23:09
15:15:22
14
14
13
15
14
14
13
15
14:01:10
14:12:59
13:23:09
15:15:22
14:01:10
14:12:59
13:23:09
15:15:22
14:01:10
14:12:59
13:23:09
15:15:22
14:01:10
14:12:59
13:23:09
15:15:22
Error with syntax near (line 1, column 71):

CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1));
                                                                      ^
syntax error, unexpected MINUS, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1));
Error with syntax near (line 1, column 71):

CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1.5));
                                                                      ^
syntax error, unexpected MINUS, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1.5));
Error with syntax near (line 1, column 71):

CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(abcd));
                                                                      ^^^^
syntax error, unexpected IDENTIFIER_START, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(abcd));

